--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,18 +10,23 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Imports: 
- magrittr (>= 2.0.1),
- dplyr (>= 1.0.5),
- utils (>= 4.0.4),
- DBI (>= 1.1.1),
- data.table (>= 1.14.0),
- glue (>= 1.4.2),
- lubridate (>= 1.7.10),
- odbc (>= 1.3.1),
- purrr (>= 0.3.4),
- stringr (>= 1.4.0),
- readr (>= 1.4.0)
+    magrittr (>= 2.0.1),
+    dplyr (>= 1.0.5),
+    utils (>= 4.0.4),
+    DBI (>= 1.1.1),
+    data.table (>= 1.14.0),
+    glue (>= 1.4.2),
+    lubridate (>= 1.7.10),
+    odbc (>= 1.3.1),
+    purrr (>= 0.3.4),
+    stringr (>= 1.4.0),
+    readr (>= 1.4.0),
+    Rcpp
 Suggests:
-  ROracle
+    testthat (>= 3.0.0),
+    ROracle
 URL: https://github.com/eauleaf/easydbconn
 BugReports: https://github.com/eauleaf/easydbconn/issues
+LinkingTo: 
+    Rcpp
+Config/testthat/edition: 3
