--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,13 @@ export(clean_query)
 export(get_data)
 export(get_db_con)
 export(read_query)
+export(remove_table)
 export(save_table)
 export(transfer_message_beg)
 export(transfer_message_end)
 import(DBI)
 import(odbc)
+import(pool)
 importFrom(data.table,timetaken)
 importFrom(magrittr,"%>%")
 importFrom(purrr,modify_if)
