updated version number added get_os function udpated get_db_con to setup connection strings depending on the os currently being use. windows machines to use .renviron. macos and linux to use dsns

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(clean_query)
 export(get_data)
 export(get_db_con)
+export(get_os)
 export(read_query)
 export(remove_table)
 export(save_table)
